Fix responsiveness on mobile & color scheme again

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header > button {
 
 header > button:focus,
 header > button:hover {
-  background: var(--clr-neutral-900);
+  background: var(--clr-accent-100);
   color: var(--clr-neutral-100);
   transition: all 0.15s ease-in-out;
 }
@@ -75,22 +75,21 @@ book section / grid
 */
 
 .book-section {
-  width: 100vw;
   display: flex;
   justify-content: center;
 }
 
 .book-grid {
   position: relative; /* for footer */
+
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
   align-items: center;
   justify-items: center;
   gap: 2rem;
 
-  width: min(calc(100% -2rem), 960px);
+  max-width: 90%;
   padding: 5vh 1rem;
-  /* background: var(--bg-transparent); */
 }
 
 /*
@@ -102,6 +101,9 @@ book cards
   height: 100%;
 
   padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
 
   background: var(--clr-neutral-100);
   box-shadow: var(--box-shadow);
@@ -143,6 +145,8 @@ book cards
 }
 
 .card .card-icon-container {
+  margin-top: auto;
+
   display: flex;
   justify-content: end;
   align-items: center;
@@ -160,6 +164,11 @@ book cards
   text-align: right;
   color: var(--clr-neutral-900);
   font-size: 1.25em;
+}
+
+.card .fa-solid.fa-square-check,
+.card .fa-solid.fa-square {
+  padding-left: 0;
 }
 
 .card .fa-solid:hover,
@@ -180,6 +189,7 @@ book cards
   background: none;
   border-radius: none;
   padding: 0.5em;
+  padding-left: 0;
 }
 
 /*
@@ -281,7 +291,7 @@ input::placeholder {
 
 .modal button:focus,
 .modal button:hover {
-  background: var(--clr-neutral-90);
+  background: var(--clr-accent-100);
   color: var(--clr-neutral-100);
   transition: background-color 0.15s ease-in-out;
 }
